Changed Registration UI. Added logo for Facebook, Twitter and Microsoft.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="send_icon">send icon</string>
     <string name="enter_message">Enter Message</string>
     <string name="logout">Logout</string>
+    <string name="login_twitter">Login Twitter</string>
+    <string name="facebook_register">Facebook Register</string>
+    <string name="twitter_register">twitter_register</string>
+    <string name="microsoft_register">microsoft register</string>
 </resources>
