--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
     <string name="facebook_register">Facebook Register</string>
     <string name="twitter_register">twitter_register</string>
     <string name="microsoft_register">microsoft register</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="signup">Signup</string>
+    <string name="email_login">Email</string>
+    <string name="username_login">Username</string>
+    <string name="password_login">Password</string>
+    <string name="login">Login</string>
 </resources>
