Facebook Registration working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="password_login">Password</string>
     <string name="login">Login</string>
     <string name="welcome">Welcome to Cloud Counselage Connect+</string>
-    <string name="facebook_app_id">1234</string>
+    <string name="facebook_app_id">189149910883714</string>
     <string name="fb_login_protocol_scheme">fb1234</string>
-    <string name="facebook_client_token">56789</string>
+    <string name="facebook_client_token">701284a013b5aa5bef341520bdb15d8f</string>
 
 
 </resources>
